<resources>
	<string name="app_name">TruckStatusKotlin</string>
	<string name="user_name">Username</string>
	<string name="password">Password</string>
	<string name="scan_qr_text">สแกน</string>
	<string name="numberTKT">010698765</string>
	<string name="customerPermit">ผ่าน</string>
	<string name="licensePlate">2166</string>
	<string name="submitBtn">Submit</string>
	<string name="cancelBtn">Cancel</string>
	<string name="programName">Export Cargo Inspection</string>
	<string name="historyBtn">History</string>
	<string name="logout">Logout</string>
	<string name="list_before">รายการก่อนหน้า:</string>
	<string name="main_status_txt">Status:</string>
	<string name="main_green">GREEN</string>
	<string name="main_red">RED</string>
	<string name="main_error">ERROR</string>
	<string name="main_msg_green">Message: ไปจุดขนถ่าย</string>
	<string name="main_msg_red">Message: ไปจุดตรวจ</string>
	<string name="main_msg_error">Message: มีปัญหาบางอย่าง...</string>
	<string name="pass_prompt">ด่าน</string>
	<string name="gate_prompt">ประตู</string>

	<string-array name="pass_arrays">
		<item>ด่าน</item>
		<item>2</item>
		<item>3</item>
	</string-array>
	<string-array name="gate_arrays">
		<item>ประตู</item>
		<item>2</item>
		<item>3</item>
	</string-array>
	<string name="title_activity_navigationbar">NavigationbarActivity</string>
	<string name="title_home">Home</string>
	<string name="title_history">Transaction</string>
</resources>
