<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#ECECEC">

        <LinearLayout
                android:id="@+id/linearLayout1"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="5dp"
                android:weightSum="20"
                android:background="@drawable/menuback"
                tools:ignore="MissingConstraints">

            <TextView
                    android:layout_width="26dp"
                    android:layout_height="26dp"
                    android:textColor="#00a6ff"
                    android:fontFamily="@font/thsarabunnew"
                    android:textStyle="bold"
                    android:text=""
                    android:textSize="17sp"
                    android:layout_weight="1"/>

            <ImageView
                    android:id="@+id/imageView1"
                    android:layout_width="70dp"
                    android:layout_height="35dp"
                    app:srcCompat="@drawable/companynamelogo"
                    android:layout_weight="15"
                    android:contentDescription="Logo Program"/>

            <ImageView
                    android:id="@+id/check_pass_logout"
                    android:layout_width="26dp"
                    android:layout_height="26dp"
                    app:srcCompat="@drawable/ic_exit_to_app_black_24dp"
                    android:layout_weight="1"/>

        </LinearLayout>


        <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="match_parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout1"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_marginTop="85dp"
                android:layout_height="wrap_content">
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="420dp"
                    android:orientation="vertical"
                    android:gravity="bottom"
                    android:background="@drawable/main_card"
                    android:padding="10dp">
                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="90dp"
                        android:orientation="vertical"
                        android:padding="12dp"
                        android:background="@drawable/mainmsgstroke">
                    <TextView
                            android:layout_width="match_parent"
                            android:layout_height="30dp"
                            android:fontFamily="@font/sbmodern"
                            android:gravity="start"
                            android:inputType="text"
                            android:text="@string/main_error"
                            android:textColor="#3B47B8"
                            android:textSize="20dp"
                            android:textStyle="bold"/>
                    <TextView
                            android:id="@+id/msg_status_main"
                            android:layout_width="match_parent"
                            android:layout_height="30dp"
                            android:fontFamily="@font/sbmodern"
                            android:gravity="start"
                            android:inputType="text"
                            android:layout_marginLeft="40dp"
                            android:padding="5dp"
                            android:text="@string/main_msg_error"
                            android:textColor="#8D8C8C"
                            android:textSize="20dp"/>
                </LinearLayout>
                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="bottom"
                        android:orientation="vertical"
                        android:layout_weight="10">
                    <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:weightSum="20">
                        <EditText
                                android:id="@+id/barcode_id"
                                android:layout_width="match_parent"
                                android:layout_height="70dp"
                                android:text="@string/numberTKT"
                                android:fontFamily="@font/sbmodern"
                                android:textSize="25dp"
                                android:paddingStart="20dp"
                                android:textColor="#8D8C8C"
                                android:layout_marginTop="6dp"
                                android:paddingLeft="5dp"
                                android:inputType="textEmailAddress"
                                android:drawableLeft="@drawable/ic_barcode"
                                android:background="@drawable/wback"
                                android:layout_weight="2"
                        />

                    </LinearLayout>
                    <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:orientation="horizontal"
                            android:layout_marginTop="10dp"
                            android:weightSum="20">

                        <EditText
                                android:id="@+id/car_lc"
                                android:layout_width="match_parent"
                                android:layout_height="70dp"
                                android:text="@string/licensePlate"
                                android:inputType="textEmailAddress"
                                android:fontFamily="@font/sbmodern"
                                android:paddingStart="20dp"
                                android:textColor="#8D8C8C"
                                android:drawableLeft="@drawable/ic_lc"
                                android:textSize="25dp"
                                android:paddingLeft="5dp"
                                android:background="@drawable/wback"
                                android:layout_weight="2"
                        />
                    </LinearLayout>
                </LinearLayout>
                </LinearLayout>
                <LinearLayout
                        android:id="@+id/linearLayout2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
                        android:orientation="horizontal"
                        android:layout_marginTop="10dp"
                        android:padding="3dp"
                        android:layout_marginBottom="20sp"
                        android:weightSum="2"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp">

                    <Button
                            android:id="@+id/cancel_btn"
                            android:layout_width="wrap_content"
                            android:layout_height="50dp"
                            android:background="@drawable/bluestroke"
                            android:text="@string/cancelBtn"
                            android:fontFamily="@font/sbmodern"
                            android:textSize="25dp"
                            android:layout_weight="1"
                            android:textStyle="bold"
                            android:textColor="#3b47b8"/>
                    <Button
                            android:id="@+id/submit_btn"
                            android:layout_width="wrap_content"
                            android:layout_height="50dp"
                            android:background="@drawable/submitback"
                            android:text="@string/submitBtn"
                            android:fontFamily="@font/sbmodern"
                            android:textSize="25dp"
                            android:layout_marginLeft="5dp"
                            android:layout_weight="1"
                            android:textStyle="bold"
                            android:textColor="@android:color/white"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout1" tools:ignore="MissingConstraints">
            <ImageView
                    android:layout_width="137dp"
                    android:layout_height="137dp" app:srcCompat="@drawable/pass"
                    android:id="@+id/imageView3" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="136dp" app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="20dp"/>
        </LinearLayout>
    </android.support.constraint.ConstraintLayout>

</layout>