<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:padding="5dp"
            android:weightSum="4" tools:ignore="MissingConstraints">
        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="100dp"
            android:layout_height="50dp"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="0dp"
            app:srcCompat="@drawable/pat_logo"
            android:layout_weight="1"/>

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="70dp"
            android:layout_height="70dp"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="0dp"
            app:srcCompat="@drawable/qrcode"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/check_pass_history"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textStyle="bold"
            android:textColor="#00a6ff"
            android:text="History"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/check_pass_logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textStyle="bold"
            android:textColor="#00a6ff"
            android:text="Logout"
            android:layout_weight="1"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout1"
        android:orientation="vertical"
        android:padding="10dp">
        <Button
            android:id="@+id/post_backBtn"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="@color/colorPrimary"
            android:text="@string/scan_qr_text"
            android:textColor="@android:color/white" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        android:orientation="vertical"
        android:padding="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:padding="4dp"
            android:weightSum="2">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="end"
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_marginRight="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="เลขที่ ทกท. 05:"
                    android:layout_weight="1"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="customers permit:"
                    android:layout_weight="1"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="ทะเบียนรถ:"
                    android:layout_weight="1"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_weight="2">
                <TextView
                    android:id="@+id/login_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/numberTKT"
                    android:gravity="center"
                    android:inputType="textEmailAddress"
                    android:background="@drawable/back"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/customerPermit"
                    android:gravity="center"
                    android:inputType="textEmailAddress"
                    android:background="@drawable/redback"
                    android:textColor="@android:color/white"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/licensePlate"
                    android:inputType="textEmailAddress"
                    android:gravity="center"
                    android:background="@drawable/back"
                    />

            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:padding="4dp"
            android:weightSum="2">

            <LinearLayout
                android:layout_width="144dp"
                android:layout_height="match_parent"
                android:layout_marginRight="30dp"
                android:layout_weight="1"
                android:gravity="end"
                android:orientation="vertical"></LinearLayout>
            <LinearLayout

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:weightSum="3"
                android:padding="4dp">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <Button
                        android:id="@+id/submit_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:background="#4c77d4"
                        android:text="@string/submitBtn"
                        android:layout_marginRight="13px"
                        android:textColor="@android:color/white" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <Button
                        android:id="@+id/cancel_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:background="#bdbdbd"
                        android:text="@string/cancelBtn"
                        android:textColor="@android:color/white" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
        android:orientation="vertical"
        android:padding="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:padding="4dp"
            android:background="@color/colorBeforeHeaderName"
            android:weightSum="4">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="วันเวลาที่แสกน"
                android:textSize="10dp"
                android:textColor="@android:color/white"
                android:layout_weight="1"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="เลข หกก.05"
                android:gravity="center"
                android:textSize="10dp"
                android:textColor="@android:color/white"
                android:layout_weight="1"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="ทะเบียนรถ"
                android:textSize="10dp"
                android:textColor="@android:color/white"
                android:layout_weight="1"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="จำนวนรถคันที่"
                android:textSize="10dp"
                android:textColor="@android:color/white"
                android:layout_weight="1"/>
        </LinearLayout>
    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="499dp"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4"
        android:fillViewport="true"
        android:padding="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <ListView
                android:id="@+id/before_listing"
                android:layout_width="match_parent"
                android:layout_height="match_parent"></ListView>

        </LinearLayout>
    </ScrollView>
    </android.support.constraint.ConstraintLayout>

</layout>