<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/background_login">

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="35dp">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="315dp"
                android:layout_height="200dp"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/pat_logo2"
                tools:layout_editor_absoluteX="0dp" />

            <ImageView
                    android:layout_width="315dp"
                    android:layout_height="50dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/appname"
                    tools:layout_editor_absoluteX="0dp" />

            <EditText
                android:id="@+id/login_email"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/wback"
                android:drawableLeft="@drawable/ic_perm_identity_black_24dp"
                android:ems="10"
                android:hint="@string/user_name"
                android:textStyle="bold"
                android:paddingStart="10dp"
                android:fontFamily="@font/thsarabunnew"
                android:inputType="textEmailAddress"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/login_password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/wback"
                android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
                android:ems="10"
                android:fontFamily="@font/thsarabunnew"
                android:textStyle="bold"
                android:paddingStart="10dp"
                android:hint="Password"
                android:inputType="textPassword"
                android:singleLine="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
            <LinearLayout
                android:id="@+id/linearLayout4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2"
                android:paddingStart="3dp"
                android:paddingEnd="3dp"
                android:layout_marginTop="5dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/wback"
                    android:layout_weight="1">
                    <Spinner
                    android:id="@+id/spinner1"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:entries="@array/pass_arrays"
                    android:prompt="@string/pass_prompt" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/wback"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1">
                    <Spinner
                        android:id="@+id/spinner2"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:entries="@array/gate_arrays"
                        android:prompt="@string/gate_prompt" />
                </LinearLayout>
            </LinearLayout>

            <Button
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:background="@drawable/blueback"
                android:fontFamily="@font/thsarabunnew"
                android:text="LOGIN"
                android:textStyle="bold"
                android:textColor="@android:color/white"
                android:textFontWeight="500"
                android:textSize="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <android.support.constraint.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="20dp" />
        </LinearLayout>
    </ScrollView>
    </android.support.constraint.ConstraintLayout>

</layout>